ingress/ingress-tomcat.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations:
    kubernetes.io/infress.class: "nginx"

spec:
  rules:
  - host: tomcat.jb.com
    http:
      paths:
      - path:
        backend:
          serviceName: tomcat
          servicePort: 80
